Update combine reducers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,11 @@
         "react",
         "jsx-a11y",
         "import"
-    ]
+    ],
+    "globals": {
+      "fetch": true
+    },
+    "rules": {
+      "no-console": 0
+    }
 }
