--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     },
     "rules": {
       "no-console": 0,
-      "react/jsx-filename-extension": [0]
+      "react/jsx-filename-extension": [0],
+      "comma-dangle": 0
     }
 }
