--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react": "^15.4.2",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.10.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
