--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
     "rules": {
       "no-console": 0,
       "react/jsx-filename-extension": [0],
-      "comma-dangle": 0
+      "comma-dangle": 0,
+      "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+      "no-static-element-interactions": 0
     }
 }
