--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,10 +9,10 @@
       "fetch": true
     },
     "rules": {
-      "no-console": 0,
+      "no-console": [ "warn", { "allow": ["error"] } ],
       "react/jsx-filename-extension": [0],
       "comma-dangle": 0,
-      "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-      "no-static-element-interactions": 0
+      "no-underscore-dangle": [ "error", { "allow": ["_id"] } ],
+      "jsx-a11y/no-static-element-interactions": 0
     }
 }
