--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
         "jsx-a11y",
         "import"
     ],
+    "env": {
+      "browser": true
+    },
     "globals": {
       "fetch": true
     },
@@ -12,7 +15,11 @@
       "no-console": [ "warn", { "allow": ["error"] } ],
       "react/jsx-filename-extension": [0],
       "comma-dangle": 0,
-      "no-underscore-dangle": [ "error", { "allow": ["_id"] } ],
+      "no-underscore-dangle": [ "error", {
+        "allow": [
+          "_id", "__REDUX_DEVTOOLS_EXTENSION__"
+        ] 
+      } ],
       "jsx-a11y/no-static-element-interactions": 0
     }
 }
