--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,9 @@
       "no-underscore-dangle": [ "error", {
         "allow": [
           "_id", "__REDUX_DEVTOOLS_EXTENSION__"
-        ] 
+        ]
       } ],
-      "jsx-a11y/no-static-element-interactions": 0
+      "jsx-a11y/no-static-element-interactions": 0,
+      "react/forbid-prop-types": ["warn", { "forbid": ["any"] }]
     }
 }
